# K3ssMem

./: .gitignore  README.md
K3ssMem/: .gitignore  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  PROJECT.md  docker-compose.host-ollama.yml  docker-compose.yml  main.py  pyproject.toml  runner.py  stdio_server.py
K3ssMem/app/: config.py  mcp_handler.py
K3ssMem/docs/: configuration.md  troubleshooting.md
docs/: tool-reference.md
mcp-gateway/: .dockerignore  .env.example  CHANGELOG.md  DEPLOYMENT.md  PRODUCTION_READY_SUMMARY.md  PROJECT.md  README.md  claude_desktop_config.json  cleanup_database.py  deploy.sh  docker-compose.host-ollama.yml  docker-compose.minimal.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  runner.py  setup_claude_integration.sh  test_add_observations.py  test_complete_workflow.py  test_create_relations.py  test_mcp_protocol.py  test_read_and_open.py
mcp-gateway/app/: config.py  embedding_client.py  mcp_handler.py  neo4j_client.py
